fixed an issue with navbar not collapsing on small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
   h5,
   h6 {
     margin: 0;
+    font-family: 'Anton', sans-serif;
   }
   
   p {
@@ -65,13 +66,12 @@
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
-    height: calc(100vh - 100px);
+    height: 500px;
   }
 
   .sectionHeading {
     text-transform: uppercase;
     margin-bottom: 30px;
-    font-weight: 900;
     text-align: center;
   }
 
